Fixed a small issue on the positing of the navbar content on mobile view

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ nav {
   nav {
     flex-direction: column;
     padding: 3% 0;
+    justify-content: center;
   }
   .nav-links {
     display: none;
